# automacao-operacional

./: README.md  pyproject.toml
automacao_operacional/: main.py
automacao_operacional/digitalizar_propostas/facta/: run_facta.py
automacao_operacional/digitalizar_propostas/facta/steps/: cadastro_dados_pessoais_informacoes_de_contato.py  cadastro_dados_pessoais_informacoes_do_beneficio.py  login.py  run_cadastro_dados_pessoais.py  run_cadastro_propostas.py  run_proposta_simulador.py  run_simulador.py  simulador_dados_da_proposta.py
automacao_operacional/digitalizar_propostas/steps/first_page/: login.py  run_proposta_simulador.py  simulador_dados_da_proposta.py  simulador_dados_da_simulacao.py  simulador_dados_do_cliente.py  simulador_dados_do_representante_legal.py  simulador_tabela_for_operacao.py
automacao_operacional/digitalizar_propostas/steps/fourth_page/: dados_profissionais.py
automacao_operacional/digitalizar_propostas/steps/second_page/: dados_cadastro_operacao.py
automacao_operacional/digitalizar_propostas/steps/util/: data.py
automacao_operacional/simulador/steps/: login.py  proposta_simulador.py  run_proposta_simulador.py  simulador_dados_da_simulacao.py  simulador_tabela_for_operacao.py
automacao_operacional/steps/: login.py  proposta_simulador.py  simulador_dados_da_proposta.py  simulador_dados_da_simulacao.py  simulador_dados_do_cliente.py  simulador_dados_do_representante_legal.py
automacao_operacional/steps/util/: data.py  element_identifiers.py
automacao_operacional/yuppie/steps/: get_values.py  propostas.py  yuppie_login.py
(+34 files in other folders)
